$Id$

2005-09-03 Sebastian Dransfeld (sebastid at tango flipp net)
       * src/plugin/imap.c: Fix memleak, and remove server
         from server list before destroying it.

2005-09-03 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugin/imap.c: Merged Sebastian Dransfeld's patch that
          implents "connection sharing"
        * src/plugin/pop3.c: Updated for recent imap changes
        * src/plugin/{imap,pop3}.c: Remove event handlers for server
          events on shutdown (Sebastian Dransfeld)

2005-09-03 Sebastian Dransfeld (sebastid at tango flipp net)
        * m4/ac_path_generic.m4: Remove trailing info after x.y.z
          in versions.
        * src/lib/embrace.c: Make embrace_load_ui () static,
          it is only used in this file.
        * src/lib/embrace.{h,c}: Add void to functions without
          arguments.
        * src/e_mod_main.c: Add void to functions without arguments,
          and remove erronous argument.

2005-08-29 Michael Jennings (mej at eterm org)
        * Makefile.am, embrace.spec:  Applied patch from Jim Perrin
          <jperrin@gmail.com> for "make dist" and RPM build.

2005-08-03 Tilman Sauerbeck (tilman at code-monkey de)
        * data/Makefile.am: Fixed installation directory for
          create_embrace_cfg.sh

2005-06-29 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/{pop3,imap}/{pop3/imap}.c: Fixed compilation with
          latest ecore_con

2005-05-17 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/pop3/pop3.c: Don't die on unexpected input data

2005-04-26 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/pop3/pop3.c: Send CRLF after QUIT, too
        * src/plugins/pop3/pop3.c: Send QUIT on error

2005-03-25 Tilman Sauerbeck (tilman at code-monkey de)
        * README: documented the force-mailbox-check feature

2005-03-25 Tilman Sauerbeck (tilman at code-monkey de)
        * Released version 0.0.2
