@@ -5,7 +5,8 @@ if BUILD_MBOX
 AM_CFLAGS = -I$(top_srcdir)/src/include \
             @EDB_CFLAGS@   \
             @EVAS_CFLAGS@  \
-            @ECORE_CFLAGS@
+            @ECORE_CFLAGS@ \
+            @EDJE_CFLAGS@
 
 plugin_LTLIBRARIES = libmbox.la
 plugindir = @PLUGIN_DIR@
