@@ -3,10 +3,11 @@
 if BUILD_SYLPHEED
 
 AM_CFLAGS = -I$(top_srcdir)/src/include \
-	    @XML_CFLAGS@   \
+            @XML_CFLAGS@   \
             @EDB_CFLAGS@   \
             @EVAS_CFLAGS@  \
-            @ECORE_CFLAGS@
+            @ECORE_CFLAGS@ \
+            @EDJE_CFLAGS@
 
 plugin_LTLIBRARIES = libsylpheed.la
 plugindir = @PLUGIN_DIR@
